--- a/contato.html
+++ b/contato.html
@@ -18,18 +18,36 @@
                 <h1 class="h1">Olá! Como podemos te ajudar?</h1>
             </div>
             <div>
-                <input type="text" class="texto-pesquisa search h1" placeholder="    Pesquise aqui">
+                <input type="text" class="texto-pesquisa search h1" placeholder="  Pesquise aqui">
             </div>
         </div>
 
-        
+
     </header>
 
-    
-    <div class="artigo">
-        <h4 class="h1 artigo">ARTIGOS</h4>
 
-        </div>
+    <div class="artigo">
+        <hr class="linha-horizontal">
+        <h4 class="h1 artigo-correcao">ARTIGOS</h4>
+        <hr class="linha-horizontal">
+
+</div>
+<div class="problemas artigos-lista h1">
+    <ul>
+        <li>
+            <h4>Problemas no <br>cadastro</h4>
+        </li>
+        <li>
+            <h4>Erros na hora da <br>compra</h4>
+        </li>
+        <li>
+            <h4>Algum problema no <br>site</h4>
+        </li>
+        <li>
+            <h4>Problemas na hora da <br>entrega</h4>
+        </li>
+    </ul>
+</div>
 
 
 </body>
