modifiquei o arquivo indexhome.html

--- a/pedro/indexhome.html
+++ b/pedro/indexhome.html
@@ -48,7 +48,7 @@
             <a href="#" target="_blank"><i class="bx bxs-user-circle bx-md cor-branco"></i></a>
         </div>
     </header>
-    <!--Area do Baner-Rotatorio-->
+    <!--Area do Banner-Rotatorio-->
     <main>
         <div class="area-ofertas">
 
