Adição de img e modificação na caixa-marca

--- a/pedro/indexhome.html
+++ b/pedro/indexhome.html
@@ -93,13 +93,13 @@
     <!--Area de Acesso das Marcas de Cameras-->
     <div class="area-marca">
         <div class="caixa-marca">
-
+            <img src="" alt="">
         </div>
-        <div>
-
+        <div class="caixa-marca">
+            <img src="" alt="">
         </div>
-        <div>
-
+        <div class="caixa-marca">
+            <img src="" alt="">
         </div>
 
     </div>
