--- a/pedro/indexhome.html
+++ b/pedro/indexhome.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>Home System</title>
+    <title>Home-Home System</title>
 </head>
 
 <body>
@@ -24,9 +24,11 @@
 
         <div class="sub-cabecalho Comfortaa-Style">
             <ul>
-                <li>Telefone: 4002-8922</li>
                 <li>
-                    <link href=""> Cadastro
+                    <link href="#">Telefone: 4002-8922
+                </li>
+                <li>
+                    <link href="#"> Cadastro
                 </li>
 
                 <li>
@@ -37,10 +39,10 @@
                     </div>
                 </li>
                 <li>
-                    <link href="">Contato
+                    <link href="#">Contato
                 </li>
                 <li>
-                    <link href="">Sobre nós
+                    <link href="#">Sobre nós
                 </li>
             </ul>
         </div>
@@ -67,7 +69,7 @@
                             alt="Baner Oferta dia 24/07">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="img/promoção.png" class="d-block w-100" alt="50% de desconto Camera Positivo">
                     </div>
                     <div class="carousel-item">
                         <img src="..." class="d-block w-100" alt="...">
@@ -92,15 +94,18 @@
     </div>
     <!--Area de Acesso das Marcas de Cameras-->
     <div class="area-marca">
+        <div class="caixa-marca Comfortaa-Style">
+            <img src="" alt="">
+        </div>
+        <span class="marca-titulo Comfortaa-Style">INTELBRAS</span>
         <div class="caixa-marca">
             <img src="" alt="">
         </div>
+        <span class="marca-titulo Comfortaa-Style">POSITIVO</span>
         <div class="caixa-marca">
             <img src="" alt="">
         </div>
-        <div class="caixa-marca">
-            <img src="" alt="">
-        </div>
+        <span class="marca-titulo Comfortaa-Style">TP-LINK</span>
 
     </div>
 
