Finalização paginade contato

--- a/contato.html
+++ b/contato.html
@@ -25,26 +25,29 @@
 
     </header>
 
-
     <div class="artigo">
         <hr class="linha-horizontal">
         <h4 class="h1 artigo-correcao">ARTIGOS</h4>
         <hr class="linha-horizontal">
 
 </div>
-<div class="problemas artigos-lista h1">
+<div class="problemas artigos-lista h1 caixa-de-suporte">
     <ul>
         <li>
-            <h4>Problemas no <br>cadastro</h4>
+            <h4>Problemas no <i class="cor-suporte h1">cadastro</i></h4>
         </li>
         <li>
-            <h4>Erros na hora da <br>compra</h4>
+            <h4>Erros na hora da <i class="cor-suporte h1">compra</i></h4>
+        </li>
+        </ul>
+    </div>
+    <div class="ajustar caixa-suporte-2 artigos-lista h1">
+        <ul>
+        <li>
+            <h4>Algum problema no <br><i class="cor-suporte h1">site</i></h4>
         </li>
         <li>
-            <h4>Algum problema no <br>site</h4>
-        </li>
-        <li>
-            <h4>Problemas na hora da <br>entrega</h4>
+            <h4>Problemas na hora da <br><i class="cor-suporte h1">entrega</i></h4>
         </li>
     </ul>
 </div>
@@ -53,6 +56,14 @@
 </body>
 
 
-<footer></footer>
+<footer>
+    <div class="imagens-footer"><img src="img/icone 1.png" alt="" srcset=""></div>
+    <div class="imagens-footer"><img src="img/icone 2.png" alt="" srcset=""></div>
+    <div class="imagens-footer"><img src="img/icone 3.png" alt="" srcset=""></div>
+    <div class="imagens-footer"><img src="img/icone 4.png" alt="" srcset=""></div>
+
+    <div class="cor-branca"><span class="h1 ">Entre em contato conosco através de: homesuporte@gmail.com</span></div>
+    
+</footer>
 
 </html>
