Finalização pagina Home

--- a/pedro/indexhome.html
+++ b/pedro/indexhome.html
@@ -19,16 +19,16 @@
     <header class="cabecalho">
 
         <div class="logo">
-            <img src="img/logo camera tudo branco.png" alt="Logo Camera branca como nome HOME SYSTEN">
+            <img src="img/logo camera tudo branco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN">
         </div>
 
         <div class="sub-cabecalho Comfortaa-Style">
             <ul>
                 <li>
-                    <link href="#">Telefone: 4002-8922
+                    Telefone: 4002-8922
                 </li>
                 <li>
-                    <link href="#"> Cadastro
+                    <a href="#">Cadastro</a> 
                 </li>
 
                 <li>
@@ -39,10 +39,10 @@
                     </div>
                 </li>
                 <li>
-                    <link href="#">Contato
+                    <a href="#">Contato</a> 
                 </li>
                 <li>
-                    <link href="#">Sobre nós
+                    <a href="#">Sobre nós</a> 
                 </li>
             </ul>
         </div>
@@ -65,14 +65,16 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/Beige Minimalist Interior Design Email Header.png" class="d-block w-100"
-                            alt="Baner Oferta dia 24/07">
+                        <img src="img/banner 2.png" class="d-block w-100"
+                            alt="Produtos bons para uma casa inteligente">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/promoção.png" class="d-block w-100" alt="50% de desconto Camera Positivo">
+                        <img src="img/banner 4.png" class="d-block w-100" 
+                        alt="Agenda para instalação">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="img/banner 1.png" class="d-block w-100" 
+                        alt="">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -95,21 +97,21 @@
     <!--Area de Acesso das Marcas de Cameras-->
     <div class="area-marca">
         <div class="caixa-marca Comfortaa-Style">
-            <img src="" alt="">
+            <img src="img/intelbras.png" alt="Marca INTELBRAS">
         </div>
         <span class="marca-titulo Comfortaa-Style">INTELBRAS</span>
         <div class="caixa-marca">
-            <img src="" alt="">
+            <img src="img/POSITIVO 2.png" alt="Marca POSITIVO">
         </div>
         <span class="marca-titulo Comfortaa-Style">POSITIVO</span>
         <div class="caixa-marca">
-            <img src="" alt="">
+            <img src="img/tplink.jpg" alt="Marca TP-LINK">
         </div>
         <span class="marca-titulo Comfortaa-Style">TP-LINK</span>
 
     </div>
 
 </body>
-<footer>Rodapé</footer>
+<footer></footer>
 
 </html>
