--- a/pedro/index.html
+++ b/pedro/index.html
@@ -19,7 +19,7 @@
     <header class="cabecalho">
 
         <div class="logo">
-            <img src="img/logo camera tudo branco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN">
+            <img src="img/logocameratudobranco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN">
         </div>
 
         <div class="sub-cabecalho Comfortaa-Style">
@@ -65,15 +65,15 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/banner 2.png" class="d-block w-100"
+                        <img src="img/banner2.png" class="d-block w-100"
                             alt="Produtos bons para uma casa inteligente">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/banner 4.png" class="d-block w-100" 
+                        <img src="img/banner4.png" class="d-block w-100" 
                         alt="Agenda para instalação">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/banner 1.png" class="d-block w-100" 
+                        <img src="img/banner1.png" class="d-block w-100" 
                         alt="">
                     </div>
                 </div>
@@ -101,7 +101,7 @@
         </div>
         <span class="marca-titulo Comfortaa-Style">INTELBRAS</span>
         <div class="caixa-marca">
-            <img src="img/POSITIVO 2.png" alt="Marca POSITIVO">
+            <img src="img/POSITIVO2.png" alt="Marca POSITIVO">
         </div>
         <span class="marca-titulo Comfortaa-Style">POSITIVO</span>
         <div class="caixa-marca">
@@ -110,8 +110,9 @@
         <span class="marca-titulo Comfortaa-Style">TP-LINK</span>
 
     </div>
-
+        <footer></footer>
 </body>
-<footer></footer>
+
+
 
 </html>
