--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Telefone: 4002-8922
                 </li>
                 <li>
-                    <a href="#">Cadastro</a> 
+                    <a href="http://127.0.0.1:5500/cadastroHome.html" target="_blank">Cadastro</a> 
                 </li>
 
                 <li>
@@ -39,15 +39,15 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">Contato</a> 
+                    <a href="http://127.0.0.1:5500/contato.html" target="_blank">Contato</a> 
                 </li>
                 <li>
-                    <a href="#">Sobre nós</a> 
+                    <a href="">Sobre nós</a> 
                 </li>
             </ul>
         </div>
         <div class="linha">
-            <a href="#" target="_blank"><i class="bx bxs-user-circle bx-md cor-branco"></i></a>
+            <a href="http://127.0.0.1:5500/homesystem.html" target="_blank"><i class="bx bxs-user-circle bx-md cor-branco"></i></a>
         </div>
     </header>
     <!--Area do Banner-Rotatorio-->
@@ -66,15 +66,15 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/banner2.png" class="d-block w-100"
-                            alt="Produtos bons para uma casa inteligente">
+                            alt="Banner de exploração de novos produtos">
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner4.png" class="d-block w-100" 
-                        alt="Agenda para instalação">
+                        alt="Agenda usa instalação">
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner1.png" class="d-block w-100" 
-                        alt="">
+                        alt="Banner Frete gratis, segurança em primeiro lugar e descubra produtos que mudão vidas">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -99,15 +99,15 @@
         <div class="caixa-marca Comfortaa-Style">
             <img src="img/intelbras.png" alt="Marca INTELBRAS">
         </div>
-        <span class="marca-titulo Comfortaa-Style">INTELBRAS</span>
+        <a href="#"><span class="marca-titulo Comfortaa-Style">INTELBRAS</span></a>
         <div class="caixa-marca">
             <img src="img/POSITIVO2.png" alt="Marca POSITIVO">
         </div>
-        <span class="marca-titulo Comfortaa-Style">POSITIVO</span>
+        <a href="#"><span class="marca-titulo Comfortaa-Style">POSITIVO</span></a>
         <div class="caixa-marca">
             <img src="img/tplink.jpg" alt="Marca TP-LINK">
         </div>
-        <span class="marca-titulo Comfortaa-Style">TP-LINK</span>
+       <a href="#"><span class="marca-titulo Comfortaa-Style">TP-LINK</span></a>
 
     </div>
         <footer></footer>
