ajuste na fonte no documento do projeto

--- a/contato.html
+++ b/contato.html
@@ -57,12 +57,8 @@
 
 
 <footer>
-    <div class="imagens-footer"><img src="img/icone 1.png" alt="Caixa de conversa do cadastro" srcset=""></div>
-    <div class="imagens-footer"><img src="img/icone 2.png" alt="Lupa para informações e erros" srcset=""></div>
-    <div class="imagens-footer"><img src="img/icone 3.png" alt="Imagem descrita de problemas no site" srcset=""></div>
-    <div class="imagens-footer"><img src="img/icone 4.png" alt="Caixa de problemas na hora da entrega" srcset=""></div>
-
-    <div class="cor-branca"><span class="h1 ">Entre em contato conosco através de: homesuporte@gmail.com</span></div>
+    
+    <div class="cor-branca"><span class="h1 ">Entre em contato conosco através de nosso <a href="http://127.0.0.1:5500/suporte.html">suporte</a> </span></div>
     
 </footer>
 
