--- a/entrarHome.html
+++ b/entrarHome.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="description" content="HTML, CSS">
         <meta name="keywords" content="HTML, CSS">
-        <meta name="author" content="Fran">
+        <meta name="author" content="Fran, Flavia, Pedro, Maria">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="stylesheet" href="css/homesystem.css">
+        <link rel="stylesheet" href="css/cadastro.css">
         <title>Home System</title>
     </head>
     <body>  
