ajustes nos links entre as páginas

--- a/contato.html
+++ b/contato.html
@@ -34,20 +34,20 @@
 <div class="problemas artigos-lista h1 caixa-de-suporte">
     <ul>
         <li>
-            <h4>Problemas no <i class="cor-suporte h1">cadastro</i></h4>
+            <h4 class="alinhamneto">Problemas no <i class="cor-suporte h1">cadastro</i></h4>
         </li>
         <li>
-            <h4>Erros na hora da <i class="cor-suporte h1">compra</i></h4>
+            <h4 class="alinhamneto">Erros na hora da <i class="cor-suporte h1">compra</i></h4>
         </li>
         </ul>
     </div>
     <div class="ajustar caixa-suporte-2 artigos-lista h1">
         <ul>
         <li>
-            <h4>Algum problema no <br><i class="cor-suporte h1">site</i></h4>
+            <h4 class="alinhamneto">Algum problema no <br><i class="cor-suporte h1">site</i></h4>
         </li>
         <li>
-            <h4>Problemas na hora da <br><i class="cor-suporte h1">entrega</i></h4>
+            <h4 class="alinhamneto">Problemas na hora da <br><i class="cor-suporte h1">entrega</i></h4>
         </li>
     </ul>
 </div>
@@ -58,7 +58,7 @@
 
 <footer>
     
-    <div class="cor-branca"><span class="h1 ">Entre em contato conosco através de nosso <a href="http://127.0.0.1:5500/suporte.html">suporte</a> </span></div>
+    <h4 class="h1">Entre em contato conosco através de nosso <a href="http://127.0.0.1:5500/suporte.html">suporte</a></h4>
     
 </footer>
 
