--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <li>
                     <div class="search-box ">
-                        <input type="text" class="texto-pesquisa seach-text" placeholder="    Pesquisar..."><i
+                        <input type="text" class="texto-pesquisa seach-text" placeholder="Pesquisar"><i
                             class="bx bx-search bx-md"></i>
 
                     </div>
