ajustando o baner-ofertas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Telefone: 4002-8922
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5500/cadastroHome.html" target="_blank">Cadastro</a> 
+                    <a href="http://127.0.0.1:5500/cadastroHome.html" target="_blank">Cadastro</a>
                 </li>
 
                 <li>
@@ -39,56 +39,58 @@
                     </div>
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5500/contato.html" target="_blank">Contato</a> 
+                    <a href="http://127.0.0.1:5500/contato.html" target="_blank">Contato</a>
                 </li>
                 <li>
-                    <a href="">Sobre nós</a> 
+                    <a href="">Sobre nós</a>
                 </li>
             </ul>
         </div>
         <div class="linha">
-            <a href="http://127.0.0.1:5500/homesystem.html" target="_blank"><i class="bx bxs-user-circle bx-md cor-branco"></i></a>
+            <a href="http://127.0.0.1:5500/homesystem.html" target="_blank"><i
+                    class="bx bxs-user-circle bx-md cor-branco"></i></a>
         </div>
     </header>
     <!--Area do Banner-Rotatorio-->
     <main>
-        <div class="area-ofertas">
+        <div>
+            <div class="area-ofertas">
 
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/banner2.png" class="d-block w-100"
+                                alt="Banner de exploração de novos produtos">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/banner4.png" class="d-block w-100" alt="Agenda usa instalação">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/banner1.png" class="d-block w-100"
+                                alt="Banner Frete gratis, segurança em primeiro lugar e descubra produtos que mudão vidas">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/banner2.png" class="d-block w-100"
-                            alt="Banner de exploração de novos produtos">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/banner4.png" class="d-block w-100" 
-                        alt="Agenda usa instalação">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/banner1.png" class="d-block w-100" 
-                        alt="Banner Frete gratis, segurança em primeiro lugar e descubra produtos que mudão vidas">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+
             </div>
-
         </div>
     </main>
     <div class="titulo">
@@ -107,10 +109,10 @@
         <div class="caixa-marca">
             <img src="img/tplink.jpg" alt="Marca TP-LINK">
         </div>
-       <a href="#"><span class="marca-titulo Comfortaa-Style">TP-LINK</span></a>
+        <a href="#"><span class="marca-titulo Comfortaa-Style">TP-LINK</span></a>
 
     </div>
-        <footer></footer>
+    <footer></footer>
 </body>
 
 
