Atualização do titulo

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Pedro, Duda, Flávia e Francielly">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/contato.css">
-    <title>Exemplos HTML5</title>
+    <title>Contato</title>
 </head>
 
 <body>
