--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Telefone: 4002-8922
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5500/cadastroHome.html" target="_blank">Cadastro</a>
+                    <a href="http://127.0.0.1:5501/cadastroHome.html" target="_blank">Cadastro</a>
                 </li>
 
                 <li>
@@ -39,7 +39,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5500/contato.html" target="_blank">Contato</a>
+                    <a href="http://127.0.0.1:5501/contato.html" target="_blank">Contato</a>
                 </li>
                 <li>
                     <a href="">Sobre nós</a>
@@ -47,7 +47,7 @@
             </ul>
         </div>
         <div class="linha">
-            <a href="http://127.0.0.1:5500/homesystem.html" target="_blank"><i
+            <a href="http://127.0.0.1:5501/entrarHome.html" target="_blank"><i
                     class="bx bxs-user-circle bx-md cor-branco"></i></a>
         </div>
     </header>
