Alterando o titulo e arrumando erros ortograficos

--- a/cadastroHome.html
+++ b/cadastroHome.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/cadastro.css">
-        <title>Home System</title>
+        <title>Página deCadastro</title>
     </head>
     <body>  
       
@@ -36,7 +36,7 @@
                     <input required type="password" placeholder="Senha">
                 </div>
                 <div class="input_box">
-                    <input required type="password" placeholder="Confirma a senha">
+                    <input required type="password" placeholder="Confirmar a senha">
                 </div>
                 
                 <div>
