--- a/galeria.html
+++ b/galeria.html
@@ -119,14 +119,14 @@
 
                 </div>
 
-                <img src="img/camera.png"dish-image alt="">
+                <img src="img/camera positivo.webp"dish-image alt="">
 
                 <h3 class="dish-title">
-                    Câmera Inteligente Full HD 
+                    Câmera Segurança Wifi
                 </h3>
 
                 <span class="dish-description">
-                    Im3 C Branca Intelbras
+                    Câmera Segurança Wifi Wireless Fullhd 360 Robô Visão Noturna
                 </span>
 
                 <div class="dish-rate">
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="dish-price">
-                    <h4>R$ 239,92</h4>
+                    <h4>R$ 349,90</h4>
                 </div>
             </div>
 
@@ -147,19 +147,19 @@
 
                 </div>
 
-                <img src="img/camera3.png" class="dish-image" alt="">
+                <img src="img/shopping.webp" class="dish-image" alt="">
 
                 <h3 class="dish-title">
-                    Kit Câmera Interna 
+                    Kit Câmera Ip Ptz
                 </h3>
 
                 <span class="dish-description">
-                    Inteligente Wi-Fi Full HD Intelbras iM4 C + capa Cachorro
+                    Positivo Câmera Ip Ptz Dome 2mp Captação De Áudio Poe Ia
                 </span>
 
 
                 <div class="dish-price">
-                    <h4>R$ 290,01</h4>
+                    <h4>R$ 1100,90</h4>
                 </div>
             </div>
 
@@ -167,19 +167,19 @@
                 <div class="dish-heart">
                 </div>
 
-                <img src="img/camera5.png" class="dish-image" alt="">
+                <img src="img/camerapositivo3.webp" class="dish-image" alt="">
 
                 <h3 class="dish-title">
-                    Kit Câmera iM7 Collor
+                    Kit Câmera Inteligente
                 </h3>
 
                 <span class="dish-description">
-                    Full / Cartão Micro SD 128GB
+                    Positivo Casa Inteligente Smart Câmera Wi-fi 2° Geração
                 </span>
 
 
                 <div class="dish-price">
-                    <h4>R$580,88</h4>
+                    <h4>R$220,88</h4>
                 </div>
             </div>
 
@@ -188,18 +188,18 @@
                     
                 </div>
 
-                <img src="img/camera6.png" class="dish-image" alt="">
+                <img src="img/51rkR7uXNKL._AC_SX679_.jpg" class="dish-image" alt="">
 
                 <h3 class="dish-title">
-                    Câmera Inteligente Externa 
+                    Câmera de Exterior
                 </h3>
 
                 <span class="dish-description">
-                    iM5 S 4MP Branca Intelbras
+                    Câmera de Segurança Exterior A28b IP66 com Visão Noturna e Detecção de Movimento, Dupla Lente
                 </span>
 
                 <div class="dish-price">
-                    <h4>R$870,90</h4>
+                    <h4>R$270,90</h4>
                 </div>
             </div>
         </div>
