ajustes na galeria e termino do footer

--- a/galeria.html
+++ b/galeria.html
@@ -41,7 +41,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$ 239,92</h4>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                 </span>
 
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$ 290,01</h4>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 </span>
 
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$580,88</h4>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     iM5 S 4MP Branca Intelbras
                 </span>
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$870,90</h4>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$ 349,90</h4>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                 </span>
 
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$ 1100,90</h4>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                 </span>
 
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$220,88</h4>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                     Câmera de Segurança Exterior A28b IP66 com Visão Noturna e Detecção de Movimento, Dupla Lente
                 </span>
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$270,90</h4>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$ 239,92</h4>
                 </div>
             </div>
@@ -254,7 +254,7 @@
                 </span>
 
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$ 290,01</h4>
                 </div>
             </div>
@@ -274,7 +274,7 @@
                 </span>
 
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$580,88</h4>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                     iM5 S 4MP Branca Intelbras
                 </span>
 
-                <div class="dish-price">
+                <div class="preco">
                     <h4>R$870,90</h4>
                 </div>
             </div>
