--- a/entrarHome.html
+++ b/entrarHome.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="HTML, CSS">
-        <meta name="keywords" content="HTML, CSS">
+        <meta name="description" content="Entrar">
+        <meta name="keywords" content="Pagina de Entrar">
         <meta name="author" content="Fran, Flavia, Pedro, Maria">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
