--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="sobre-nós">
-    <meta name="keysword" content="sobre-nós">
+    <meta name="keysword" content="pagina de sobre-nós">
     <meta name="author" content="Flavia, Fran, Pedro, Maria">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
