modifiquei algumas coisas na cadastro e home

--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
         </div>
         <a href="#"><span class="marca-titulo Comfortaa-Style">POSITIVO</span></a>
         <div class="caixa-marca">
-            <img src="img/tplink.jpg" alt="Marca TP-LINK">
+            <img src="img/camera 5 tp-link (1).webp" alt="Marca TP-LINK">
         </div>
         <a href="#"><span class="marca-titulo Comfortaa-Style">TP-LINK</span></a>
 
     </div>
+
     <footer>
         <div class="container-footer">
             <div class="row-footer">
