--- a/cadastroHome.html
+++ b/cadastroHome.html
@@ -16,7 +16,7 @@
     <div class="cadastro_body">
         <div class="cadastroHome">
             <h2 class="comfortaa-style">Cadastro</h2>
-            <form>
+            <form id="cadastrar">
                 <div class="input_box">
                     <input required type="text" placeholder="Nome">
                 </div>
