--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="cabecalho">
 
         <div class="logo">
-            <img src="img/logocameratudobranco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN">
+            <a href="index.html"><img src="img/logocameratudobranco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN"></a>
         </div>
 
         <div class="sub-cabecalho Comfortaa-Style">
@@ -28,7 +28,7 @@
                     Telefone: 4002-8922
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5501/cadastroHome.html" target="_blank">Cadastro</a>
+                    <a href="cadastroHome.html" target="_blank">Cadastro</a>
                 </li>
 
                 <li>
@@ -37,15 +37,15 @@
                     </form>
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5501/contato.html" target="_blank">Contato</a>
+                    <a href="contato.html" target="_blank">Contato</a>
                 </li>
                 <li>
-                    <a href="">Sobre nós</a>
+                    <a href="sobrenos.html">Sobre nós</a>
                 </li>
             </ul>
         </div>
         <div class="linha">
-            <a href="http://127.0.0.1:5501/entrarHome.html" target="_blank"><i
+            <a href="entrarHome.html" target="_blank"><i
                     class="bx bxs-user-circle bx-md cor-branco"></i></a>
         </div>
     </header>
@@ -97,15 +97,15 @@
         <div class="caixa-marca Comfortaa-Style">
             <img src="img/intelbras.png" alt="Marca INTELBRAS">
         </div>
-        <a href="#"><span class="marca-titulo Comfortaa-Style">INTELBRAS</span></a>
+        <a href="galeria.html"><span class="marca-titulo Comfortaa-Style">INTELBRAS</span></a>
         <div class="caixa-marca">
             <img src="img/POSITIVO2.png" alt="Marca POSITIVO">
         </div>
-        <a href="#"><span class="marca-titulo Comfortaa-Style">POSITIVO</span></a>
+        <a href="galeria.html"><span class="marca-titulo Comfortaa-Style">POSITIVO</span></a>
         <div class="caixa-marca">
-            <img src="img/tplink.jpg" alt="Marca TP-LINK">
+            <img src="img/imagesTP-LINK.jfif" alt="Marca TP-LINK">
         </div>
-        <a href="#"><span class="marca-titulo Comfortaa-Style">TP-LINK</span></a>
+        <a href="galeria.html"><span class="marca-titulo Comfortaa-Style">TP-LINK</span></a>
 
     </div>
     <footer>
@@ -115,7 +115,7 @@
                 <div class="footer-col">
                     <h4>Empresa</h4>
                     <ul>
-                        <li><a href="">Quem somos</a></li>
+                        <li><a href="sobrenos.html">Quem somos</a></li>
                         <li><a href="">nossos serviços</a></li>
                     </ul>
                 </div>
