Correção de erro

--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
     <header class="cabecalho">
 
         <div class="logo">
-            <img src="img/logocameratudobranco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN">
+           <a href="index.html"> <img src="img/logocameratudobranco.png" alt="LOGO CAMERA BRANCA COMO NOME HOME SYSTEN"> </a>
         </div>
 
         <div class="sub-cabecalho Comfortaa-Style">
@@ -24,7 +24,7 @@
                     Telefone: 4002-8922
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5501/cadastroHome.html" target="_blank">Cadastro</a>
+                    <a href="cadastroHome.html" target="_blank">Cadastro</a>
                 </li>
 
                 <li>
@@ -33,7 +33,7 @@
                     </form>
                 </li>
                 <li>
-                    <a href="http://127.0.0.1:5501/contato.html" target="_blank">Contato</a>
+                    <a href="contato.html" target="_blank">Contato</a>
                 </li>
                 <li>
                     <a href="">Sobre nós</a>
@@ -41,7 +41,7 @@
             </ul>
         </div>
         <div class="linha">
-            <a href="http://127.0.0.1:5501/entrarHome.html" target="_blank"><i
+            <a href="entrarHome.html" target="_blank"><i
                     class="bx bxs-user-circle bx-md cor-branco"></i></a>
         </div>
     </header>
