teste rodape cadastro

--- a/cadastroHome.html
+++ b/cadastroHome.html
@@ -37,9 +37,6 @@
                 <div class="input_box">
                     <input required type="password" placeholder="Senha">
                 </div>
-                <div class="input_box">
-                    <input required type="password" placeholder="Confirmar a senha">
-                </div>
                 
                 <div>
                     <button class="submit">
@@ -86,6 +83,7 @@
             </div>
         </div>
     </footer>
+    <script src="BackEnd/src/cadastrar.js"></script>
 </body>
 
 </html>
