--- a/entrarHome.html
+++ b/entrarHome.html
@@ -17,7 +17,7 @@
         <div class="login_body">
             <div class="login_box">
                 <h2 class="comfortaa-style">Entrar</h2>
-                <form>
+                <form id="logar">
                     <div class="input_box">
                         <input required type="email" placeholder="Email">
                     </div>
