--- a/cadastroHome.html
+++ b/cadastroHome.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/cadastro.css">
+        <link rel="stylesheet" href="css/index.css">
         <title>Página de Cadastro</title>
     </head>
     <body>  
