--- a/cadastroHome.html
+++ b/cadastroHome.html
@@ -76,7 +76,7 @@
                     </ul>
                 </div>
                 
-                <img class="logo-1" src="img/logocameratudobranco.png" alt="">
+                <a href="index.html"> <img class="logo-1" src="img/logocameratudobranco.png" alt="Logo HomeSysten"></a>
 
                 </div>
                 
